Flear: Major spark and livy bug fixes